src/App.css
@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;600;800;900&display=swap");

* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

body {
  background-color: #111111;
  color: #f5f5f5;
  font-family: "Poppins", sans-serif;
}

html {
  scroll-behavior: smooth;
}

.container {
  margin: 0 auto;
  width: 90%;
  max-width: 1120px;
}

.sub-heading-section {
  text-transform: uppercase;
  font-size: 0.9rem;
  line-height: 1.6;
  color: #b3e0b7fa;
  /* color: #ff415d; */
  margin-bottom: 0.1em;
  font-family: "Poppins", sans-serif;
}

#blob {
  width: 300px;
  height: 100px;
  border-radius: 50%;
  background: linear-gradient(to right, #ff415d, #62a8b2);
  animation: blobanimate 10s infinite linear forwards;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  cursor: pointer;
  pointer-events: none;
  z-index: -2;
  transition: 750ms linear;
}
#overlay {
  width: 100%;
  height: 100%;
  pointer-events: none;
  position: absolute;
  z-index: -1;
  backdrop-filter: blur(100px);
}

